2002-11-10  Mo DeJong  <mdejong@uncounted.org>

	* gui/makepane.tcl (ExecMake): Pipe stdout
	and stderr from make to cat and read the
	results from the pipe. The old code used
	2>@stdout in an attempt to do this, but
	that fails under Windows with Tcl 8.3.

2002-11-10  Mo DeJong  <mdejong@uncounted.org>

	* gui/emacs.tcl (sn_ensure_emacs_running):
	Remove 2>@stdout argument to exec since
	this is failing under Windows with Tcl 8.3.
	Log subprocess errors if they occur.

2002-09-13  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (make_editor_bindings):
	Move Editor bindings after instance bindings
	to avoid a problem with highlighting when
	indenting text when events are processed
	in the wrong order.
	[Bug 597660]

2002-09-11  Mo DeJong  <supermo@bayarea.net>

	Added SN-511-2002-09-11 tag.

2002-09-11  Mo DeJong  <supermo@bayarea.net>

	* configure: Regen.
	* configure.in: Update version to 5.1.1.

2002-09-11  Mo DeJong  <supermo@bayarea.net>

	* mkdist.sh: Update version to 5.1.1.
	Rework toplevel directory test so it
	checks for tcl and tk directories.
	Remove any .rej files from dest dir
	after patching.

2002-09-11  Mo DeJong  <supermo@bayarea.net>

	* patches/tcl_configure.patch: Undo deletion of
	configure patch since we do need it
	to build using tcl module from 5.1.0.

2002-09-05  Mo DeJong  <supermo@bayarea.net>

	* gui/text.tcl (tkTextInsertChar): Sync so that
	highlighted region is deleted in other editors
	when a character is typed.

2002-09-04  Mo DeJong  <supermo@bayarea.net>

	* gui/text.tcl (tkTextInsert): Sync other
	editors when pasting into a text widget.
	[Bug 594678]

2002-07-30  Mo DeJong  <supermo@bayarea.net>

	* patches/tcl_configure.patch: Remove patch since
 	it has been committed to the CVS.

2002-07-30  Mo DeJong  <supermo@bayarea.net>

	* gui/editorpane.tcl (filter): Sort symbols before
	inserting them into the editor combo box. This
	reverses an accidental gui change introduced
	in 5.0 as part of the combo rewrite.